# goofish-cli

./: .gitignore  README.md  pyproject.toml
docs/: mcp-setup.md
src/goofish_cli/: cli.py  mcp_server.py
src/goofish_cli/commands/auth/: login.py
src/goofish_cli/commands/item/: get.py  list.py
src/goofish_cli/core/: browser.py  config.py  crypto.py  errors.py  fsutil.py  mtop.py  output.py  proxy_guard.py  registry.py  session.py  sign.py  token.py
tests/: test_crypto.py  test_item_list.py  test_output.py  test_proxy_guard.py  test_session_bootstrap.py
