[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goofish-cli"
version = "0.3.0"
description = "闲鱼 CLI — 支持 MCP，未来支持 Claude Skills。为 AI Agent 提供闲鱼自动化基础能力。"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "fancy", email = "saral96@mail.com" }]
keywords = ["xianyu", "goofish", "cli", "mcp", "ai-agent", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "requests>=2.31",
  "loguru>=0.7",
  "typer>=0.12",
  "pydantic>=2.6",
  "pyexecjs>=1.5",
  "rich>=13.7",
  "pyyaml>=6.0",
  "tenacity>=8.2",
  "mcp>=1.2",
  "websockets>=13",
  "browser-cookie3>=0.20",
  "playwright>=1.58.0",
  "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
goofish = "goofish_cli.cli:app"
# MCP server 入口。名字与 package 名一致，`uvx goofish-cli` 可直接拉起（uvx 默认按
# command 名查包，和 scripts 名对齐就不用 --from 绕弯）。这是 Claude Code 等 AI Agent
# 配 MCP 时的推荐写法。
goofish-cli = "goofish_cli.mcp_server:main"
# 保留 `goofish-mcp` 别名只在 **本包已装** 时可用（`pip install goofish-cli` /
# `uv tool install goofish-cli` / `uvx --from goofish-cli goofish-mcp`）。单独的
# `uvx goofish-mcp` 仍会因 PyPI 无同名包解析失败 —— 这不是别名能救的，Claude Code
# MCP 配置必须用上面的 `uvx goofish-cli`。
goofish-mcp = "goofish_cli.mcp_server:main"

[project.urls]
Homepage = "https://github.com/fancyboi999/goofish-cli"
Repository = "https://github.com/fancyboi999/goofish-cli"
Issues = "https://github.com/fancyboi999/goofish-cli/issues"
Changelog = "https://github.com/fancyboi999/goofish-cli/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/goofish_cli"]

# 内置 Claude Skills：把项目根 `skills/` 收进 wheel 的 `goofish_cli/_bundled_skills/`，
# 让 `goofish skills install` 能按包内路径定位到它（当前实现用 `goofish_cli.__file__`
# 拼子路径，不依赖 importlib.resources，避免 namespace package 在不同 py 版本上的行为差异）。
[tool.hatch.build.targets.wheel.force-include]
"skills" = "src/goofish_cli/_bundled_skills"

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "skills/",
  ".claude-plugin/",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# 显式钉住异步 fixture 的 event loop 作用域，消除 pytest-asyncio 1.x 在未设置时
# 抛的 PytestDeprecationWarning（否则每次 run 都提示默认值将变化）。
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  # wmi（browser_cookie3 在 Windows 上枚举浏览器的依赖）docstring 里有 \_ 等非法转义，
  # Python 3.11 会抛 DeprecationWarning。第三方库、改不了源码，直接忽略。
  "ignore:invalid escape sequence:DeprecationWarning",
]
